# LunarSim_DPE

./: .gitignore  CMakeLists.txt  README.md  main.cpp
exportData/: moonPosVelMatlab_10Hz_1s.csv  satEph.csv  satPosVel.csv
importData/: navSettings.yaml  navSettings_1h.yaml  navSettings_2h.yaml  navSettings_Ti.yaml
importData/2024_300/: DUMG00ATA_R_20243000000_01D_EN.rnx  NYAL00NOR_S_20243000000_01D_GN.rnx  TLSE00FRA_R_20243000000_01D_RN.rnx
include/: ephemeris.h  geoFunctions.h  navInfo.h  orbitFunctions.h  rinexReader.h  satInfo.h  settingsLoader.h  signalFunctions.h  signalGenerator.h  timeFunctions.h  twoStepSolver.h
matlab_support/: main_LunarSim.m  main_LunarSim_1h.m  main_LunarSim_coherent_time.m  moon_position.m  orbit_visualize.m  result_analysis.m  setConstants.m
matlab_support/MoonPosition/: AddThe.m  EOP-All.txt  EclMatrix.m  IERS.m  MeanObliquity.m  Mjday_TDB.m  Moon.m  Polar.m  PrecMatrix.m  SAT_Const.m  finddays.m  invjday.m  test_MoonPosition.m
matlab_support/coordinatesFunctions/: eci2moonLlh.m  getMoonPosECI.m  getRmcmf2eci.m  getSatPosVel.m  getUserPosVelECEF.m  gps2utcDate.m  isCoveredEarth.m  loadMoonMoving.m  lobeRange.m  mcmf2eci.m  mcmf2moonLlh.m  moonLlh2eci.m  moonLlh2enu.m  moonLlh2mcmf.m  moon_position.m  utcDate2gpsSec.m
matlab_support/geoFunctions/: leastSquarePos.m  satpos.m
matlab_support/include/: ecc_anomaly_0.m  ephemeris.m  (+2 more)
src/: ephemeris.cpp  geoFunctions.cpp  navInfo.cpp  orbitFunctions.cpp  rinexReader.cpp  satInfo.cpp  settingsLoader.cpp  signalFunctions.cpp  signalGenerator.cpp  timeFunctions.cpp  twoStepSolver.cpp
(+37 files in other folders)
